--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-baseURL: "https://malsius.github.io/notion-ghpages"
+baseURL: "https://new-sunset-shimmer.github.io/"
 title: Blog template
 theme: PaperMod
 
